answers/hw2/y.output
Grammar

    0 $accept: line $end

    1 line: statement NEWLINE
    2     | statement NEWLINE line
    3     | NEWLINE line

    4 statement: NAME '=' expression
    5          | expression

    6 expression: expression '+' expression
    7           | expression '-' expression
    8           | NUMBER
    9           | NAME


Terminals, with rules where they appear

$end (0) 0
'+' (43) 6
'-' (45) 7
'=' (61) 4
error (256)
NUMBER (258) 8
NAME (259) 4 9
NEWLINE (260) 1 2 3


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
line (10)
    on left: 1 2 3, on right: 0 2 3
statement (11)
    on left: 4 5, on right: 1 2
expression (12)
    on left: 6 7 8 9, on right: 4 5 6 7


state 0

    0 $accept: . line $end

    NUMBER   shift, and go to state 1
    NAME     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    line        go to state 4
    statement   go to state 5
    expression  go to state 6


state 1

    8 expression: NUMBER .

    $default  reduce using rule 8 (expression)


state 2

    4 statement: NAME . '=' expression
    9 expression: NAME .

    '='  shift, and go to state 7

    $default  reduce using rule 9 (expression)


state 3

    3 line: NEWLINE . line

    NUMBER   shift, and go to state 1
    NAME     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    line        go to state 8
    statement   go to state 5
    expression  go to state 6


state 4

    0 $accept: line . $end

    $end  shift, and go to state 9


state 5

    1 line: statement . NEWLINE
    2     | statement . NEWLINE line

    NEWLINE  shift, and go to state 10


state 6

    5 statement: expression .
    6 expression: expression . '+' expression
    7           | expression . '-' expression

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12

    $default  reduce using rule 5 (statement)


state 7

    4 statement: NAME '=' . expression

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 13

    expression  go to state 14


state 8

    3 line: NEWLINE line .

    $default  reduce using rule 3 (line)


state 9

    0 $accept: line $end .

    $default  accept


state 10

    1 line: statement NEWLINE .
    2     | statement NEWLINE . line

    NUMBER   shift, and go to state 1
    NAME     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    $default  reduce using rule 1 (line)

    line        go to state 15
    statement   go to state 5
    expression  go to state 6


state 11

    6 expression: expression '+' . expression

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 13

    expression  go to state 16


state 12

    7 expression: expression '-' . expression

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 13

    expression  go to state 17


state 13

    9 expression: NAME .

    $default  reduce using rule 9 (expression)


state 14

    4 statement: NAME '=' expression .
    6 expression: expression . '+' expression
    7           | expression . '-' expression

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12

    $default  reduce using rule 4 (statement)


state 15

    2 line: statement NEWLINE line .

    $default  reduce using rule 2 (line)


state 16

    6 expression: expression . '+' expression
    6           | expression '+' expression .
    7           | expression . '-' expression

    $default  reduce using rule 6 (expression)


state 17

    6 expression: expression . '+' expression
    7           | expression . '-' expression
    7           | expression '-' expression .

    $default  reduce using rule 7 (expression)
